examples/test/testpolicy6173.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6173
  namespace: namespace277
spec:
  podSelector:
    matchLabels:
      key19: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value19
          key39: value26
          key15: value44
      podSelector:
        matchLabels:
          key10: value23
          key40: value35
